--- a/Demo_Project_4REST_API_Course/Demo_Project_4REST_API_Course.csproj
+++ b/Demo_Project_4REST_API_Course/Demo_Project_4REST_API_Course.csproj
@@ -1,10 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.0.0" />
     <PackageReference Include="NSwag.AspNetCore" Version="13.14.8" />
   </ItemGroup>
 
