--- a/Demo_Project_4REST_API_Course/Demo_Project_4REST_API_Course.csproj
+++ b/Demo_Project_4REST_API_Course/Demo_Project_4REST_API_Course.csproj
@@ -5,7 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.21" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.21" />
     <PackageReference Include="NSwag.AspNetCore" Version="13.14.8" />
   </ItemGroup>
 
